colour-adjust.css
/* Global and canvas */
html, body {
    margin: 0;
    overscroll-behavior-y: none;
    font-family: Arial, Helvetica, sans-serif;
    color: black;
    font-size: 20px;
}

.centre {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
}

input[type=button] {
    color: black; /* Ensure black buttons for ios */
}



/* Install instructions */
#installInstructions {
    width: 80%;
    font-size: larger;
    color: black;
    text-align: center;
    -webkit-user-select: none; /* Safari */
    user-select: none;
}

li {
    text-align: start;
}

#installButton {
    position: relative;
}

@media all and (display-mode: standalone) {
    #installInstructions{
        display: none;
    }
}

#browserModeWarning, #orientationWarning{
    width: 80%;
    text-align: center;
}


/* Instructions */
#mainInstructions {
    width: 80%;
}

#usernameForm{
    display: flex;
    flex-direction: column;
    padding: 0;
}

#continue {
    margin-top: 5px;
    padding: 5px;
}

/* Trials */
#trials {
    -webkit-user-select: none; /* Safari */
    user-select: none;
}

/* Buttons */
.adjustColourButton {
    width: 70px;
    height: 70px;
    background: transparent;
    border: 2px solid black;
    border-radius: 15px;
    font-size: 20px;
    /* turn off select for touchscreen */
    -webkit-touch-callout: none; /* Safari */
    -webkit-user-select: none; /* Chrome */     
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* Internet Explorer/Edge */
    user-select: none; 
}

.adjustColourButton:hover {
    cursor: pointer;
}

.adjustColourButton:active {
    background-color: black;
}

.adjustColourButton:disabled {
    /* Allow for border-color to have disabled styling */
    border-color: initial;
    /* Allow for mouseup events on a disable element to cancel interval */
    pointer-events: none;
}

#left { left: 10% }
#up { top: 10% }
#right { left: 90% }
#down { top: 90% }

/* Central color display and submit button */
#colourAndSubmit{
    text-align: center;
}

#submit {
    height: initial;
    width: initial;
    padding: 10px;
    font-size: 15px;
}

#colour {
    font-size: 30px;
}


/* Survey */
form {
    padding: 10px;
    max-width: 100%;
}

fieldset{
    padding: 5%;
    margin-top: 10px;
}

legend{
    font-weight: bold;
}

#about, #surroundings{
    display: flex;
    flex-direction: column;
    border-bottom: 1px solid black;
}

#about > label, #surroundings > label {
    border-top: 1px solid black;
    padding-top: 5px;
    padding-bottom: 10px;
    font-weight: bold;
    /* border-bottom: 1px solid black; */
}

#about > input, #surroundings > input {
    /* border-bottom: 1px solid black; */
    margin-left: 20px;
    margin-bottom: 20px;
}

.radio {
    display: grid;
    grid-template-columns: max-content min-content;
    column-gap: 10px;
    margin-left: 20px;
    margin-bottom: 20px;
}

input[type=number]{
    width: 50px;
}

#submitSurvey{
    font-size: 20px;
    margin: 5px;
    position: relative;
    left: 50%;
    transform: translateX(-50%)
}

